--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "icon48.png",
     "default_popup": "popup.html"
   },
